# Text_query

./: CMakeLists.txt  main.cpp  text.txt
includes/: And_query.h  Binary_query.h  Not_query.h  Or_query.h  Query.h  Query_base.h  Result_query.h  Text_query.h  Word_query.h  use.h
source/: And_query.cpp  Not_query.cpp  Or_query.cpp  Query.cpp  Result_query.cpp  Text_query.cpp  Word_query.cpp
